[package]
name = "clibri"
version = "0.1.2"
authors = ["DmitryAstafyev <D.Astafyev@outlook.com>"]
edition = "2018"
description = "Definition of client and server interfaces for clibri project"
repository = "https://github.com/DmitryAstafyev/clibri.lib.rust"
license = "Apache-2.0"
license-file = "LICENSE"
homepage = "https://github.com/DmitryAstafyev/clibri"
readme = "README.md"
keywords = ["websocket", "clibri", "protocol"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = ["v4"] }
tokio = { version = "1.14.0", features = ["full"] }
futures = "0.3.18"
log = "0.4.14"
log4rs = "1.0.0"
async-trait = "0.1.51"
